// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #F2F2F7;
  color: green;
}

<span
  class="emotion-0"
>
  Normal
</span>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #F2F2F7;
}

<span
  class="emotion-0"
>
  Normal
</span>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #BF4600;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Alert
</span>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #D83A2E;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Danger
</span>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #0A67D1;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Info
</span>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  background: #097D05;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Success
</span>
`;
